--- a/src/containers/QuizHeader/QuizHeader.css
+++ b/src/containers/QuizHeader/QuizHeader.css
@@ -1,10 +1,14 @@
-.QuizInfo {
+.quiz-header {
     border: 1px dotted red;
-    text-align: center; 
+    text-align: center;
     max-width: 500px;
     margin: 30px auto;
 }
 
-.QuizInfo > h1 {
+.quiz-header > h1 {
     color: darkolivegreen;
+}
+
+.quiz-header > h1 {
+    color: red
 }
