--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
 
-.btn-default {
-    padding: 6px 10px; 
-    border: 3px solid green; 
-    font-weight: bold;
-    border-radius: 5px; 
-    background-color: white;
+a {
+  text-decoration: none;
 }
 
-.btn-default:hover {
-    cursor: pointer;
-}
+
