--- a/src/containers/QuizHeader/QuizHeader.scss
+++ b/src/containers/QuizHeader/QuizHeader.scss
@@ -1,7 +1,14 @@
+@import '../../styles/variables';
+@import '../../styles//mixins';
+
 .quiz-header {
-    border: 1px dotted red;
     text-align: center;
-    max-width: 500px;
+    max-width: 800px;
     margin: 30px auto;
+
+    button {
+        @include button($darkBackground, $skyBlue);
+        margin-right: 5px;
+    }
 }
 
