--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,11 +1,11 @@
 @import '../../styles/variables';
 
 div.card {
-    border: 1px solid $darkBackground;
+    border: 1px solid $tomato;
 
-    header {
-        background-color: $darkBackground;
-        color: $skyBlue;
+    header.card-header {
+        background-color: $tomato;
+        color: white;
         padding: 10px;
         display: flex;
         align-items: center;
@@ -18,7 +18,7 @@ div.card {
         }
     }
 
-    section {
+    section.card-section {
         padding: 20px;
     }
 }
