--- a/src/containers/Result/Result.scss
+++ b/src/containers/Result/Result.scss
@@ -9,13 +9,13 @@ div.result-container {
     }
 
     table {
-        border: 1px solid $darkBackground;
+        border: 1px solid $tomato;
         width: 100%;
         border-collapse: collapse;
 
         th {
-            background-color: $darkBackground;
-            color: $skyBlue;
+            background-color: $tomato;
+            color: white;
             font-weight: normal;
         }
 
