--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,8 @@
-$darkBackground: #20232a;
-$skyBlue: #61dafb;
+
+$backgroundGrey: #F8F8F8;
+
+$darkBackground: #264653;
+$seaGreen: #2a9d8f;
+$tomato: #e76f51;
+$sandy: #f4a261;
+$mustard: #e9c46a;
